--- a/templates/footer.hbs
+++ b/templates/footer.hbs
@@ -20,21 +20,7 @@
     </div>
   </div>
 </footer> --}}
-
-<section class="ui vertical segment border-0">
-  <div class="container">
-    <div class="ui accordion">
-      <div class="title">
-        <i class="dropdown icon"></i>
-        Disclaimer
-      </div>
-      <div class="content">
-        <p>Information found on this website or provided by the Organic Start Support Team has been obtained by Organic Start from sources believed to be reliable. The accuracy, completeness, timeliness or correct sequencing of information found on this website and provided by the Organic Start Support Team, however, is never guaranteed. Manufacturers may later change or update their ingredients and instructions. Do not soley rely on the information presented and always read labels, warnings and directions before using, consuming or feeding a product. Actual product packaging and materials may contain more and/or different information.<br><br>Statements regarding supplemental products have not been evaluated by the Food and Drug Administration and are not intended to diagnose, treat, cure, or prevent any disease or health condition. You should not use information on this website and provided by the Organic Start Support Team as self-diagnosis or for treating a health problem or disease. Content on this website or provided by the Organic Start Support Team is for reference purposes and is not intended to substitute for advice given by a physician, pharmacist, or other licensed health-care professional. Always contact your health-care provider immediately if you suspect that you or your baby has a medical problem. It always best to first consult with a pediatrician or certified health-care professional.<br><br>Organic Start, Inc. (OrganicStart.com) assumes no liability for inaccuracies or misstatements about products. Organic Start reserves the right to change any information, terms, conditions and policies at anytime without notice. Organic Start does not make any express or implied warranties (including, without limitation, any warranty or merchantability or fitness for a particular purpose or use) regarding information from this website or provided by the Organic Start Support Team. Organic Start, Inc. (OrganicStart.com) assumes no liability for interruption, inaccuracy, error or omission, regardless of cause, in information on this website or provided by the Organic Start Support Team or for any damages (whether direct or indirect, consequential, punitive or exemplary) resulting therefrom.</p>
-      </div>
-    </div>
-  </div>
-</section>
-<section id="section_request" class="my-5 py-5 container">
+<section id="section_request" class="mt-5 py-5 container">
   <div class="ui large inverted segment border-0 rounded-lg-pill py-5 px-3 px-lg-5" style="background-image: linear-gradient(to right, #ff758c 0%, #ff7eb3 100%);">
     <div class="row">
       <header class="col-12 col-lg-8 align-self-center text-center text-lg-left mb-5 mb-lg-0" id="category-container">
@@ -47,6 +33,19 @@
       </header>
       <div class="col-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-4 offset-lg-0 align-self-center text-center">
         <a href="https://support.organicstart.com/hc/en-us/requests/new" class="varela ui large fluid button rounded-pill" title="Submit a Request" style="background:#fff!important;">Submit a Request</a>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="container mb-5">
+  <div class="ui segment p-2 px-4">
+    <div class="ui accordion">
+      <div class="title font-weight-bold">
+        <i class="dropdown icon"></i>
+        Disclaimer
+      </div>
+      <div class="px-5 pb-4 content">
+        <p class="transition hidden">Information found on this website or provided by the Organic Start Support Team has been obtained by Organic Start from sources believed to be reliable. The accuracy, completeness, timeliness or correct sequencing of information found on this website and provided by the Organic Start Support Team, however, is never guaranteed. Manufacturers may later change or update their ingredients and instructions. Do not soley rely on the information presented and always read labels, warnings and directions before using, consuming or feeding a product. Actual product packaging and materials may contain more and/or different information.<br><br>Statements regarding supplemental products have not been evaluated by the Food and Drug Administration and are not intended to diagnose, treat, cure, or prevent any disease or health condition. You should not use information on this website and provided by the Organic Start Support Team as self-diagnosis or for treating a health problem or disease. Content on this website or provided by the Organic Start Support Team is for reference purposes and is not intended to substitute for advice given by a physician, pharmacist, or other licensed health-care professional. Always contact your health-care provider immediately if you suspect that you or your baby has a medical problem. It always best to first consult with a pediatrician or certified health-care professional.<br><br>Organic Start, Inc. (OrganicStart.com) assumes no liability for inaccuracies or misstatements about products. Organic Start reserves the right to change any information, terms, conditions and policies at anytime without notice. Organic Start does not make any express or implied warranties (including, without limitation, any warranty or merchantability or fitness for a particular purpose or use) regarding information from this website or provided by the Organic Start Support Team. Organic Start, Inc. (OrganicStart.com) assumes no liability for interruption, inaccuracy, error or omission, regardless of cause, in information on this website or provided by the Organic Start Support Team or for any damages (whether direct or indirect, consequential, punitive or exemplary) resulting therefrom.</p>
       </div>
     </div>
   </div>
