--- a/templates/footer.hbs
+++ b/templates/footer.hbs
@@ -20,8 +20,8 @@
     </div>
   </div>
 </footer> --}}
-<section id="section_request" class="mt-5 py-5 container">
-  <div class="ui large inverted segment border-0 rounded-lg-pill py-5 px-3 px-lg-5" style="background-image: linear-gradient(to right, #ff758c 0%, #ff7eb3 100%);">
+<section class="request-section mt-5 py-5 container">
+  <div class="ui large inverted segment border-0 rounded-lg-pill py-5 px-3 px-lg-5">
     <div class="row">
       <header class="col-12 col-lg-8 align-self-center text-center text-lg-left mb-5 mb-lg-0" id="category-container">
         <h2 class="fredoka text-white m-0">
