--- a/templates/footer.hbs
+++ b/templates/footer.hbs
@@ -300,35 +300,9 @@
       for (i = 0; i < n.length; i++)
         if ((t = n[i].split("="))[0] === e) return void 0 === t[1] || t[1]
     };
+
     "/hc/requests" == u("return_to") && (window.location = "https://support.organicstart.com/hc/en-us/requests/new?submit=true"),
-      "true" == u("submit") && $("#new_request_done").removeClass("d-none"),
-      $.get("https://brainiac.organicstart.com/fb/getinventory").then(x => {
-
-        $("#inventory-key").append('      <div class="inventory-key">        <div class="sold-out item">Sold Out</div>        <div class="selling-out item">Limited</div>        <div class="lowest item">Selling Out</div>        <div class="low item">Low</div>        <div class="enough item">Moderate</div>        <div class="alot item">Sufficient</div>        <div class="full item">Full</div>      </div>      <div class="ui divider"></div>')
-        $(x.join("")).appendTo("#inventory");
-        console.log(x)
-
-
-        $(".prog").each(function (e) {
-          if ("" != $(this).text().trim())
-            if ("divider" == $(this).text().trim()) $("#inventory").append('<div class="ui divider"></div>');
-            else {
-              var t = $(this).text().split(":");
-              if ("title" == t[0]) $("#inventory").append('<h2 class="mb-3">' + t[1] + "</h2>");
-              else {
-                if (t[1] > 74) var i = "green";
-                else i = t[1] > 49 ? "yellow" : t[1] > 24 ? "orange" : "red";
-                if ("00-00-0000" != t[2].trim()) {
-                  var n = !0,
-                    a = t[2].split("-");
-                  $.timeago.settings.allowPast = !1, $.timeago.settings.allowFuture = !0;
-                  var s = $.timeago(a[2] + "-" + a[0] + "-" + a[1])
-                } else n = !1;
-                $("#inventory").append('<div class="label"><strong>' + t[0] + "</strong>" + (1 == n ? '<p class="float-right">Restock in about  ' + s.replace("about ", "").replace(" from now", "") + ".</p>" : "") + '</div><div class="ui ' + i + ' indicating progress mt-0" data-percent="' + t[1] + '" id="bar-' + e + '" style="height:100%;"><div class="bar" style="width:' + t[1] + '%!important;min-width:0!important"></div></div>')
-              }
-            }
-        })
-      })
+      "true" == u("submit") && $("#new_request_done").removeClass("d-none")
   }), $(window).scroll(function () {
     slider(), $(document).scrollTop() > $(".ui.main.menu").height() ? ($(".ui.site.menu").addClass("top"), $(".ui.site.menu").addClass("fixed"), $("body").css("padding-top", "6rem")) : ($(".ui.site.menu").removeClass("top"), $(".ui.site.menu").removeClass("fixed"), $("body").css("padding-top", "0"))
   });
@@ -354,6 +328,39 @@
   console.log(getPageInfo().id);
 </script>
 
+{{#if settings.show_articles_in_section}}
+  {{#each section.articles}}
+    {{#is title 'Current Inventory Levels'}}
+      <script>
+        $(function () {
+          $.get("https://brainiac.organicstart.com/fb/getinventory").then(x => {
+            $("#inventory-key").append('      <div class="inventory-key">        <div class="sold-out item">Sold Out</div>        <div class="selling-out item">Limited</div>        <div class="lowest item">Selling Out</div>        <div class="low item">Low</div>        <div class="enough item">Moderate</div>        <div class="alot item">Sufficient</div>        <div class="full item">Full</div>      </div>      <div class="ui divider"></div>')
+            $(x.join("")).appendTo("#inventory");
+            $(".prog").each(function (e) {
+              if ("" != $(this).text().trim())
+                if ("divider" == $(this).text().trim()) $("#inventory").append('<div class="ui divider"></div>');
+                else {
+                  var t = $(this).text().split(":");
+                  if ("title" == t[0]) $("#inventory").append('<h2 class="mb-3">' + t[1] + "</h2>");
+                  else {
+                    if (t[1] > 74) var i = "green";
+                    else i = t[1] > 49 ? "yellow" : t[1] > 24 ? "orange" : "red";
+                    if ("00-00-0000" != t[2].trim()) {
+                      var n = !0,
+                        a = t[2].split("-");
+                      $.timeago.settings.allowPast = !1, $.timeago.settings.allowFuture = !0;
+                      var s = $.timeago(a[2] + "-" + a[0] + "-" + a[1])
+                    } else n = !1;
+                    $("#inventory").append('<div class="label"><strong>' + t[0] + "</strong>" + (1 == n ? '<p class="float-right">Restock in about  ' + s.replace("about ", "").replace(" from now", "") + ".</p>" : "") + '</div><div class="ui ' + i + ' indicating progress mt-0" data-percent="' + t[1] + '" id="bar-' + e + '" style="height:100%;"><div class="bar" style="width:' + t[1] + '%!important;min-width:0!important"></div></div>')
+                  }
+                }
+            })
+          })
+        });
+      </script>
+    {{/is}}
+  {{/each}}
+{{/if}}
 <script type="application/ld+json">
   { 
     "@context" : "http://schema.org",
