--- a/templates/article_page.hbs
+++ b/templates/article_page.hbs
@@ -1,3 +1,20 @@
+{{#is article.title 'Current Inventory Levels'}}
+  <style>
+    .izzawrap {
+      position: relative;
+      min-height: 4666px!important;
+    }
+    .ui.loader {
+      z-index:5;
+      display:block;
+      position:absolute;
+      top:100px!important;
+    }
+    #inventory {
+      display: none;
+    }
+  </style>
+{{/is}}
 <div class="container">
   <div class="ui divider"></div>
   <nav class="sub-nav">
@@ -237,13 +254,7 @@
   </div>
 </div>
 
-
 {{#is article.title 'Current Inventory Levels'}}
-  <style>
-    .ui.loader {
-      
-    }
-  </style>
   <script>
     $(function () {
       $.get("https://brainiac.organicstart.com/fb/getinventory").then(x => {
