rm wholsesale nav link

--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -14,7 +14,7 @@
   <div class="ui small borderless inverted pink main menu d-print-none">
       <nav class="container">
           <a class="item" href="https://organicstart.com">Retail</a>
-          <a class="item" href="https://organicstartwholesale.com">Wholesale</a>
+          {{!-- <a class="item" href="https://organicstartwholesale.com">Wholesale</a> --}}
           <a class="item" href="https://blog.organicstart.com">Blog</a>
           <a class="active item" href="https://support.organicstart.com/hc/en-us">Support</a>
       </nav>
