rm wholesale footer

--- a/templates/footer.hbs
+++ b/templates/footer.hbs
@@ -55,7 +55,7 @@
     <div class="container">
       <div class="row">
         <nav
-          class="col-md-2 col-lg-2 col-12 text-center text-md-left ui vertical inverted text menu footer-menu mt-0 mb-0 pt-0 pb-0"
+          class="col-md-3 col-lg-3 col-12 text-center text-md-left ui vertical inverted text menu footer-menu mt-0 mb-0 pt-0 pb-0"
           data-section-type="footer-webPages">
           <div class="ui divider my-4"></div>
           <h4 class="text-white m-0">COMPANY</h4>
@@ -63,8 +63,8 @@
           <a class="item" href="https://organicstart.com" target="_blank"
             aria-describedby="a11y-new-window-external-message" rel="noopener">Retail Store<br><small>1 - 3
               Days</small></a>
-          <a class="item" href="https://organicstartwholesale.com" target="_blank" rel="noopener"
-            aria-describedby="a11y-new-window-message">Wholesale Store<br><small>10 - 15 Business Days</small></a>
+          {{!-- <a class="item" href="https://organicstartwholesale.com" target="_blank" rel="noopener"
+            aria-describedby="a11y-new-window-message">Wholesale Store<br><small>10 - 15 Business Days</small></a> --}}
           <a class="item" href="https://blog.organicstart.com/" aria-describedby="a11y-external-message">Blog</a>
           <a class="item" href="https://support.organicstart.com" aria-describedby="a11y-external-message">Family
             Support<br><small>Information &amp; Contact</small></a>
@@ -75,7 +75,7 @@
             Us<br><small>Career Opportunities</small></a>
         </nav>
         <nav
-          class="col-md-2 col-lg-2 col-12 text-center text-md-left ui vertical inverted text menu footer-menu mt-0 mb-0 pt-0 pb-0"
+          class="col-md-3 col-lg-3 col-12 text-center text-md-left ui vertical inverted text menu footer-menu mt-0 mb-0 pt-0 pb-0"
           data-section-type="footer-categories">
           <div class="ui divider my-4"></div>
           <h4 class="text-white m-0">RETAIL</h4>
@@ -110,7 +110,7 @@
           <a class="item" href="https://organicstart.com/clearance/"
             aria-describedby="a11y-external-message">Clearance</a>
         </nav>
-        <nav
+        {{!-- <nav
           class="col-md-2 col-lg-2 col-12 text-center text-md-left ui vertical inverted text menu footer-menu mt-0 mb-0 pt-0 pb-0"
           data-section-type="footer-webPages">
           <div class="ui divider my-4"></div>
@@ -139,9 +139,9 @@
             RTF<br><small>(Ready-to-Feed)</small></a>
           <a class="item" href="https://organicstartwholesale.com/collections/topfer">Topfer</a>
           <a class="item" href="https://organicstartwholesale.com/collections/nannycare">NannyCare</a>
-        </nav>
+        </nav> --}}
         <nav
-          class="col-md-2 col-lg-2 col-12 text-center text-md-left ui vertical inverted text menu footer-menu mt-0 mb-0 pt-0 pb-0"
+          class="col-md-3 col-lg-3 col-12 text-center text-md-left ui vertical inverted text menu footer-menu mt-0 mb-0 pt-0 pb-0"
           data-section-type="footer-webPages">
           <div class="ui divider my-4"></div>
           <h4 class="text-white m-0">RESOURCES</h4>
@@ -159,8 +159,8 @@
             aria-describedby="a11y-external-message">Instructions</a>
           <a class="item" href="https://support.organicstart.com/hc/en-us/categories/115000448813-Orders"
             aria-describedby="a11y-external-message">Orders</a>
-          <a class="item" href="https://support.organicstart.com/hc/en-us/categories/115000448633-Wholesale"
-            aria-describedby="a11y-external-message">Wholesale</a>
+          {{!-- <a class="item" href="https://support.organicstart.com/hc/en-us/categories/115000448633-Wholesale"
+            aria-describedby="a11y-external-message">Wholesale</a> --}}
           <a class="item" href="https://support.organicstart.com/hc/en-us/articles/360000114354"
             aria-describedby="a11y-external-message">Inventory</a>
           <a class="item" href="https://support.organicstart.com/hc/en-us/sections/360000011453-Loyalty-Points"
@@ -173,7 +173,7 @@
             aria-describedby="a11y-external-message">Submit a Request</a>
         </nav>
         <nav
-          class="col-md-4 col-lg-4 col-12 text-center text-md-left ui vertical inverted text menu footer-menu mt-0 mb-0 pt-0 pb-0"
+          class="col-md-3 col-lg-3 col-12 text-center text-md-left ui vertical inverted text menu footer-menu mt-0 mb-0 pt-0 pb-0"
           data-section-type="footer-webPages">
           <div class="ui divider my-4"></div>
           <h4 class="text-white m-0">RECENT ARTICLES</h4>
