--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html class="no-js" lang="{{ locale_name }}"></html>
-   <head>
-       <meta http-equiv="refresh" content="0;URL='http://alert.organicstart.com/'" />
-   </head>
-   <body>
-   </body>
+<html class="no-js" lang="en-US"></html>
+  <head>
+      <meta http-equiv="refresh" content="0;URL='http://alert.organicstart.com/'" />
+  </head>
+  <body>
+  </body>
 </html>
