--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -11,12 +11,9 @@
   <a class="item" href="https://support.organicstart.com/hc/en-us/requests/new" title="Tech Support">Tech Support</a>
 </nav>
 <div class="pusher" itemscope="itemscope" itemtype="http://schema.org/WebPageElement">
-  <div class="ui small borderless inverted pink main menu d-print-none">
+  <div class="ui small borderless inverted horizontal red segment d-print-none m-0">
       <nav class="container">
-          <a class="item" href="https://organicstart.com">Retail</a>
-          {{!-- <a class="item" href="https://organicstartwholesale.com">Wholesale</a> --}}
-          <a class="item" href="https://blog.organicstart.com">Blog</a>
-          <a class="active item" href="https://support.organicstart.com/hc/en-us">Support</a>
+        <p class="text-white font-weight-bold">Our infant milk formulas are unavailable in the United States. The contents of this website is for international customers.</p>
       </nav>
   </div>
   <div class="ui borderless site menu d-print-none">
