--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -13,7 +13,7 @@
 <div class="pusher" itemscope="itemscope" itemtype="http://schema.org/WebPageElement">
   <div class="ui small borderless inverted horizontal red segment d-print-none m-0">
       <nav class="container">
-        <p class="text-white font-weight-bold">Our infant milk formulas are unavailable in the United States. The contents of this website is for international customers.</p>
+        <p class="text-white font-weight-bold">Our infant milk formulas are unavailable in the United States. The contents of this website is for international wholesale customers.</p>
       </nav>
   </div>
   <div class="ui borderless site menu d-print-none">
