Updated footer link for comparison chart.

--- a/templates/footer.hbs
+++ b/templates/footer.hbs
@@ -146,7 +146,7 @@
           <div class="ui divider my-4"></div>
           <h4 class="text-white m-0">RESOURCES</h4>
           <div class="ui divider my-4"></div>
-          <a class="item" href="https://organicstart.com/comparison-table/"
+          <a class="item" href="https://support.organicstart.com/hc/en-us/articles/360042835774"
             aria-describedby="a11y-external-message">Comparison Chart</a>
           <div class="ui divider my-4"></div>
           <h4 class="text-white m-0">FAMILY SUPPORT</h4>
