Added wholesale banner.

--- a/templates/article_page.hbs
+++ b/templates/article_page.hbs
@@ -22,6 +22,12 @@
     {{search scoped=settings.scoped_kb_search submit=false}}
   </nav>
   <div class="ui divider"></div>
+  <a class="wholesale-banner" href="https://organicstartwholesale.com">
+      <div class="container">
+          <h2>Shop Infant Formulas &amp; More!</h2>
+          <h3>Click here to shop from our European site.</h3>
+      </div>
+  </a>
   <div class="article-container" id="article-container">
     <section class="article-sidebar">
       {{#if settings.show_articles_in_section}}
